<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RF Calculator</string>
    <string name="title_activity_rfcalc">Decible(dB) Calculator</string>
    <string name="title_activity_dipole">Dipole Calculator</string>
    <string name="title_activity_atsc">ATSC Frequency Table</string>
    <string name="title_activity_vswr">VSWR Calculator</string>
    <string name="title_activity_wavelength">Wavelength Calculator</string>
    <string name="title_activity_los">Line of Sight Calculator</string>
    <string name="title_activity_path_loss">Free Space Path Loss</string>

    <string name="action_settings">Settings</string>

    <string name="action_rfcalc">Decible(dB) Calculator</string>
    <string name="action_dipolecalc">Dipole Calculator</string>
    <string name="action_atsc">ATSC Freq. Chart</string>
    <string name="action_vswr">VSWR Calculator</string>
    <string name="action_wavelength">Wavelength Calculator</string>
    <string name="action_los">Line of Sight Calculator</string>
    <string name="action_path_loss">Free Space Path Loss</string>


    <string name="dipole_freq">Frequency (kHz)</string>
    <string name="dipole_vel">Velocity Factor</string>
    <string name="dipole_length">Length of dipole</string>
    <string name="dipole_half">Length of one side of dipole</string>
    <string name="dipole_go">Calculate</string>
    <string name="dipole_freq_hint_7175">7175</string>
    <string name="dipole_vel_hint_0_95">0.95</string>
    <string name="dipole_hint_0">0</string>

    <string name="atsc_lower">FCC Lower Edge</string>
    <string name="atsc_pilot">Pilot</string>
    <string name="atsc_center">Center</string>
    <string name="atsc_atscupper">8VSB Upper</string>
    <string name="atsc_upper">FCC Upper Edge</string>
    <string name="atsc_button">Channel</string>
    <string name="atsc_atsclower">8VSB Lower</string>
    <string name="atsc_lowershoulder">Lower Shoulder</string>
    <string name="atsc_uppershoulder">Upper Shoulder</string>
    <string name="ATSC_19">19</string>

    <string name="vswr_VSWR">VSWR</string>
    <string name="vswr_rl">Return Loss(dB)</string>
    <string name="vswr_rc">Refl Coefficient</string>
    <string name="vswr_find">Calculate</string>
    <string name="fwd_pwr">Forward P. (W)</string>
    <string name="rev_pwr">Reflected P. (W)</string>

    <string name="los_radio_horizon">Radio Horizon</string>
    <string name="los_height">Height</string>
    <string name="los_distance">LOS Distance</string>
    <string name="antenna_height">Antenna Height</string>

    <string name="wavelength">Wavelength</string>
    <string name="wavelength_calc">Wavelength Calc.</string>
    <string name="wave_frequency">Frequency</string>
    <string name="wave_wavelength">Wavelength</string>

    <string name="fspl_calculate">Calculate</string>



    <string name="error">Error</string>
    <string name="_0_w">0 W</string>
    <string name="dbm">- dbm</string>
    <string name="dbw">- dbW</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_equals">=</string>
    <string name="_point">.</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="db">db</string>
    <string name="_dbw">dbW</string>
    <string name="_dbm">dbm</string>
    <string name="neg">+/-</string>


    <string name="frequency">Frequency</string>
    <string name="calculate">Calculate</string>


    <string name="distance">Distance</string>


    <string name="path_loss">Path Loss</string>


    <string name="units_m">m</string>
    <string name="units_km">km</string>
    <string name="units_meter">meter</string>
    <string name="units_feet">feet</string>
    <string name="units_kilometer">kilometer</string>
    <string name="units_mile">mile</string>
    <string name="units_nautical_mile">nautical mile</string>
    <string name="units_khz">kHz</string>
    <string name="units_db">dB</string>
    <string name="units_hz">Hz</string>
    <string name="units_mhz">MHz</string>
    <string name="units_ghz">GHz</string>
    <string name="units_cm">CM</string>
    <string name="units_mm">mm</string>
    <string name="units_centimeter">centimeter</string>


</resources>
