<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_rfcalc"
        android:title="@string/action_rfcalc"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_dipolecalc"
        android:title="@string/action_dipolecalc"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_atsc"
        android:title="@string/action_atsc"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_vswr"
        android:title="@string/action_vswr"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_wave"
        android:title="@string/wavelength_calc"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_los"
        android:title="@string/line_of_sight_calculator"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pathloss"
        android:orderInCategory="100"
        android:title="@string/free_space_path_loss_calculator"
        app:showAsAction="never"/>

</menu>
