<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.holybee.rfcalculator.AtscActivity">

    <EditText
        android:id="@+id/channelText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:text="@string/ATSC_19" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/atsc_lower"
        android:id="@+id/lowerText"

        android:layout_alignParentTop="false"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lowershoulderText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/atsc_pilot"
        android:id="@+id/pilotText"
        android:layout_below="@+id/atsclowerText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/atsc_center"
        android:id="@+id/centerText"
        android:layout_below="@+id/pilotText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/atsc_atscupper"
        android:id="@+id/atscupperText"
        android:layout_below="@+id/centerText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/atsc_upper"
        android:id="@+id/upperText"
        android:layout_below="@+id/atscupperText"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atsc_button"
        android:id="@+id/root_rfButton"
        android:layout_toEndOf="@+id/lowerText"
        android:layout_marginLeft="67dp"
        android:onClick="atscButtonClick"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/atsc_atsclower"
        android:id="@+id/atsclowerText"
        android:layout_below="@+id/lowerText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/atsc_uppershoulder"
        android:id="@+id/uppershoulderText"
        android:layout_below="@+id/upperText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/atsc_lowershoulder"
        android:id="@+id/lowershoulderText"
        android:layout_below="@+id/root_rfButton"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/uppershoulderText"
        android:src="@drawable/vsb2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
